--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BrandRadar | Finn trendene før alle andre</title>
   <link rel="stylesheet" href="style.css" />
+  
+  <link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/layout.css">
+<link rel="stylesheet" href="css/components.css">
+
+<link rel="stylesheet" href="css/pages/index.css">
+<link rel="stylesheet" href="css/pages/news.css">
+<link rel="stylesheet" href="css/pages/category.css">
+<link rel="stylesheet" href="css/pages/brand-page.css">
+<link rel="stylesheet" href="css/pages/favorites.css">
+
 </head>
 <body>
 
@@ -224,6 +235,7 @@
 
 </body>
 </html>
+
 
 
 
