--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
       <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
     </nav>
   </div>  
+
+  <ul class="category-bar">
+      <li class="category-item" data-category="Clothing">Klær</li>
+      <li class="category-item" data-category="Shoes">Sko</li>
+      <li class="category-item" data-category="Gymcorner">Gymcorner</li>
+      <li class="category-item" data-category="Accessories">Tilbehør</li>
+      <li class="category-item" data-category="Selfcare">Selfcare</li>
+    </ul>
 </header>
 
 <nav class="mega-menu"></nav>
@@ -217,6 +225,7 @@
 
 </body>
 </html>
+
 
 
 
