--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
     </nav>
   </div>  
 
+  <ul class="category-bar">
+      <li class="category-item" data-category="Clothing">Klær</li>
+      <li class="category-item" data-category="Shoes">Sko</li>
+      <li class="category-item" data-category="Gymcorner">Gymcorner</li>
+      <li class="category-item" data-category="Accessories">Tilbehør</li>
+      <li class="category-item" data-category="Selfcare">Selfcare</li>
+    </ul>
 </header>
 
 <nav class="mega-menu"></nav>
@@ -218,6 +225,7 @@
 
 </body>
 </html>
+
 
 
 
