--- a/product.html
+++ b/product.html
@@ -80,16 +80,16 @@
   <h2 class="related-title">Du vil kanskje like</h2>
 
   <div class="slider-wrapper">
-    
-    <button class="slider-btn prev">❮</button>
-    
+    <button type="button" class="slider-btn prev" aria-label="Forrige produkter">❮</button>
+
     <div class="related-slider" id="related-slider">
       <!-- Dynamiske produktkort -->
     </div>
 
-    <button class="slider-btn next">❯</button>
+    <button type="button" class="slider-btn next" aria-label="Neste produkter">❯</button>
   </div>
 </section>
+
 
 <script src="favorites-core.js"></script>
 <script src="script.js"></script>
