--- a/product.html
+++ b/product.html
@@ -50,7 +50,8 @@
     <img id="main-image" src="" alt="Produktbilde" />
   </div>
 
-  <div class="product-info">
+  <!-- ✅ Rename for å unngå kollisjon med product cards -->
+  <div class="product-detail-info">
 
     <button id="back-btn">← Tilbake</button>
 
@@ -90,7 +91,6 @@
   </div>
 </section>
 
-
 <script src="favorites-core.js"></script>
 <script src="script.js"></script>
 <script src="script-megamenu.js"></script>
@@ -99,4 +99,5 @@
 
 </body>
 </html>
+
 
