--- a/news.html
+++ b/news.html
@@ -53,22 +53,43 @@
     </section>
 
     <!-- 🔥 2. Ukens Deals -->
-    <section id="deals-section" class="section-padding">
-      <h2>Ukens Deals 🔥</h2>
-      <div class="deals-grid loading">Laster deals...</div>
-    </section>
+<section id="deals-section" class="section-padding">
+  <h2>Ukens Deals 🔥</h2>
 
-    <!-- 🛰️ 3. Radar Picks -->
-    <section id="picks-section" class="section-padding">
-      <h2>Radar Picks 🛰️</h2>
-      <div class="picks-grid loading">Laster picks...</div>
-    </section>
+  <div class="slider-wrapper">
+    <button type="button" class="slider-btn prev" data-target="deals" aria-label="Forrige">❮</button>
 
-    <!-- ✨ 4. Ukens Spotlight -->
-    <section id="featured-news" class="section-padding">
-      <h2>Ukens Spotlight ✨</h2>
-      <div class="featured-wrapper loading">Laster spotlight...</div>
-    </section>
+    <div class="deals-grid loading" data-slider="deals">Laster deals...</div>
+
+    <button type="button" class="slider-btn next" data-target="deals" aria-label="Neste">❯</button>
+  </div>
+</section>
+
+<!-- 🛰️ 3. Radar Picks -->
+<section id="picks-section" class="section-padding">
+  <h2>Radar Picks 🛰️</h2>
+
+  <div class="slider-wrapper">
+    <button type="button" class="slider-btn prev" data-target="picks" aria-label="Forrige">❮</button>
+
+    <div class="picks-grid loading" data-slider="picks">Laster picks...</div>
+
+    <button type="button" class="slider-btn next" data-target="picks" aria-label="Neste">❯</button>
+  </div>
+</section>
+
+<!-- ✨ 4. Ukens Spotlight -->
+<section id="featured-news" class="section-padding">
+  <h2>Ukens Spotlight ✨</h2>
+
+  <div class="slider-wrapper">
+    <button type="button" class="slider-btn prev" data-target="spotlight" aria-label="Forrige">❮</button>
+
+    <div class="featured-wrapper loading" data-slider="spotlight">Laster spotlight...</div>
+
+    <button type="button" class="slider-btn next" data-target="spotlight" aria-label="Neste">❯</button>
+  </div>
+</section>
 
     <!-- 🆕 5. Nye Produkter / Trender -->
     <section id="news-feed" class="section-padding">
