--- a/brand-page.html
+++ b/brand-page.html
@@ -111,6 +111,7 @@
 <script src="favorites-core.js"></script>
 <script src="script-favorites.js"></script>
 <script src="script.js"></script>
+<script src="search.js"></script>
 <script src="script-megamenu.js"></script>
 <script src="brand-page.js"></script>
 
