--- a/brands.html
+++ b/brands.html
@@ -124,6 +124,7 @@
 <script src="script-favorites.js"></script>
 <script src="script-brands.js"></script>
 <script src="script.js"></script>
+<script src="search.js"></script>
 <script src="script-megamenu.js"></script>
 
 </body>
