--- a/category.html
+++ b/category.html
@@ -127,6 +127,7 @@
 <script src="favorites-core.js"></script>
 <script src="script-favorites.js"></script>
 <script src="script.js"></script>
+<script src="search.js"></script>
 <script src="script-megamenu.js"></script>
 <script src="category.js"></script>
 
