--- a/favoritter.html
+++ b/favoritter.html
@@ -105,6 +105,7 @@
   <script src="favorites-core.js"></script>
   <script src="script-favorites.js"></script>
   <script src="script.js"></script>
+  <script src="search.js"></script>
   <script src="script-megamenu.js"></script>
 </body>
 </html>
