--- a/luxury.html
+++ b/luxury.html
@@ -163,6 +163,7 @@
 <script src="script-favorites.js"></script>
 <script src="script-luxury.js"></script>
 <script src="script.js"></script>
+<script src="search.js"></script>
 <script src="script-megamenu.js"></script>
 
 <!-- ✅ Gullgradient definisjon for favoritt-ikon -->
