--- a/news.html
+++ b/news.html
@@ -127,6 +127,7 @@
   <!-- 🧠 Scripts -->
   <script src="favorites-core.js"></script>
   <script src="script.js"></script>
+  <script src="search.js"></script>
   <script src="script-megamenu.js"></script>
   <script src="news.js"></script>
   <script src="script-favorites.js"></script>
