--- a/product.html
+++ b/product.html
@@ -116,9 +116,11 @@
 
 <script src="favorites-core.js"></script>
 <script src="script.js"></script>
+<script src="search.js"></script>
 <script src="script-megamenu.js"></script>
 <script src="script-favorites.js"></script>
 <script src="product.js"></script>
+
 
 </body>
 </html>
