--- a/favoritter.html
+++ b/favoritter.html
@@ -47,9 +47,9 @@
   <a href="index.html">Hjem</a>
   <a href="news.html">Nyheter</a>
   <a href="brands.html">Brands</a>
-  <a href="favoritter.html">
-    Favoritter <span id="favorites-count">0</span>
-  </a>
+  <a href="favoritter.html" class="favorites-link">
+  Favoritter <span id="favorites-count">0</span>
+</a>
      <a href="luxury.html" class="luxury-link">Luxury Corner ✨</a>
 </nav>
 
