--- a/brand-page.html
+++ b/brand-page.html
@@ -114,6 +114,8 @@
 <script src="search.js"></script>
 <script src="script-megamenu.js"></script>
 <script src="brand-page.js"></script>
+<link rel="stylesheet" href="assets/css/responsive/mobile.css">
+
 
 </body>
 </html>
