--- a/brands.html
+++ b/brands.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BrandRadar – Brands</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="assets/css/responsive/mobile.css">
+
 </head>
 <body>
  <!-- ✅ NY HEADER -->
@@ -126,6 +128,8 @@
 <script src="script.js"></script>
 <script src="search.js"></script>
 <script src="script-megamenu.js"></script>
+
+
 
 </body>
 </html>
