--- a/brand-page.html
+++ b/brand-page.html
@@ -14,6 +14,10 @@
 
 <header class="main-header">
   <div class="nav-container">
+    <button class="mobile-menu-btn" type="button" aria-label="Åpne meny" aria-controls="mobileDrawer" aria-expanded="false">
+  ☰
+</button>
+
     <a href="index.html" class="logo">BRANDRADAR</a>
 
     <div class="search-box" id="site-search">
