--- a/luxury.html
+++ b/luxury.html
@@ -70,6 +70,32 @@
   </ul>
 </header>
 
+  <div class="mobile-overlay" id="mobileOverlay" hidden></div>
+
+<nav class="mobile-drawer" id="mobileDrawer" aria-label="Mobilmeny" hidden>
+  <div class="mobile-drawer-header">
+    <p class="mobile-drawer-title">Meny</p>
+    <button class="mobile-drawer-close" type="button" aria-label="Lukk meny">✕</button>
+  </div>
+
+  <div class="mobile-drawer-section">
+    <a href="index.html">Hjem</a>
+    <a href="news.html">Nyheter</a>
+    <a href="brands.html">Brands</a>
+    <a href="favoritter.html">Favoritter</a>
+    <a href="luxury.html">Luxury Corner ✨</a>
+  </div>
+
+  <div class="mobile-drawer-section">
+    <p class="mobile-drawer-subtitle">Kategorier</p>
+    <a href="category.html?category=Clothing">Klær</a>
+    <a href="category.html?category=Shoes">Sko</a>
+    <a href="category.html?category=Gymcorner">Gymcorner</a>
+    <a href="category.html?category=Accessories">Tilbehør</a>
+    <a href="category.html?category=Selfcare">Selfcare</a>
+  </div>
+</nav>
+
   <nav class="mega-menu"></nav>
 
   <!-- =========================================
