--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
 <script src="favorites-core.js"></script>
 <script src="script-index.js"></script>
 <script src="script.js"></script>
+<script src="script-megamenu.js"></script>
 <script src="search.js"></script>
 <script src="partnerBanner.js"></script>
 <script src="script-favorites.js"></script>
@@ -294,6 +295,7 @@
 
 </body>
 </html>
+
 
 
 
