--- a/index.html
+++ b/index.html
@@ -283,6 +283,29 @@
   </div>
 </footer>
 
+
+  <nav class="m-bottom-nav" aria-label="Bunnmeny">
+  <a class="m-nav-item" href="index.html" data-route="index">
+    <span class="m-ico">🏠</span><span class="m-txt">Hjem</span>
+  </a>
+
+  <button class="m-nav-item" type="button" data-action="focus-search">
+    <span class="m-ico">🔎</span><span class="m-txt">Søk</span>
+  </button>
+
+  <a class="m-nav-item" href="favoritter.html" data-route="favoritter">
+    <span class="m-ico">❤️</span><span class="m-txt">Favoritter</span>
+  </a>
+
+  <a class="m-nav-item" href="brands.html" data-route="brands">
+    <span class="m-ico">🏷️</span><span class="m-txt">Brands</span>
+  </a>
+
+  <button class="m-nav-item" type="button" data-action="open-menu">
+    <span class="m-ico">☰</span><span class="m-txt">Meny</span>
+  </button>
+</nav>
+
 <script src="favorites-core.js"></script>
 <script src="script-index.js"></script>
 <script src="script.js"></script>
@@ -293,6 +316,7 @@
 
 </body>
 </html>
+
 
 
 
