--- a/category.html
+++ b/category.html
@@ -161,7 +161,27 @@
 <script src="search.js"></script>
 <script src="category.js"></script>
 
- 
+ <nav class="m-bottom-nav" aria-label="Bunnmeny">
+  <a class="m-nav-item" href="index.html" data-route="index">
+    <span class="m-ico">🏠</span><span class="m-txt">Hjem</span>
+  </a>
+
+  <button class="m-nav-item" type="button" data-action="focus-search">
+    <span class="m-ico">🔎</span><span class="m-txt">Søk</span>
+  </button>
+
+  <a class="m-nav-item" href="favoritter.html" data-route="favoritter">
+    <span class="m-ico">❤️</span><span class="m-txt">Favoritter</span>
+  </a>
+
+  <a class="m-nav-item" href="brands.html" data-route="brands">
+    <span class="m-ico">🏷️</span><span class="m-txt">Brands</span>
+  </a>
+
+  <button class="m-nav-item" type="button" data-action="open-menu">
+    <span class="m-ico">☰</span><span class="m-txt">Meny</span>
+  </button>
+</nav>
 
 </body>
 </html>
