--- a/search-mobile.html
+++ b/search-mobile.html
@@ -7,7 +7,7 @@
 
   <!-- Desktop base (uendret) + mobil overrides -->
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="assets/css/responsive/mobile.css" />
+  <link rel="stylesheet" href="assets/css/responsive/mobile.css?v=7" />
 </head>
 <body class="is-search-page">
 
