--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BrandRadar | Finn trendene før alle andre</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="assets/css/responsive/mobile.css">
+  <link rel="stylesheet" href="assets/css/responsive/mobile.css?v=7" />
   
 </head>
 <body>
@@ -336,6 +336,7 @@
 
 </body>
 </html>
+
 
 
 
